@@ -48,7 +48,7 @@ install_requires =
     # Also upgrade requirements_test_min.txt if you are bumping astroid.
     # Pinned to dev of next minor update to allow editable installs,
     # see https://github.com/PyCQA/astroid/issues/1341
-    astroid>=2.11.0,<=2.12.0-dev0
+    astroid>=2.11.2,<=2.12.0-dev0
     isort>=4.2.5,<6
     mccabe>=0.6,<0.8
     tomli>=1.1.0;python_version<"3.11"
