@@ -20,6 +20,10 @@ What's New in Pylint 2.13.2?
 ============================
 Release date: TBA
 
+* Fix crash when subclassing a ``namedtuple``.
+
+  Closes #5982
+
 * Fix false positive for ``superfluous-parens`` for patterns like
   "return (a or b) in iterable".
 
